# data-exploration-course

./: README.md  pyproject.toml
lab_1/: lab_1.html  lab_1.ipynb
lab_2/: lab_2.html  lab_2.ipynb
lab_3/Zadania - Eskploracja danych - analiza skupien /: IRIS_AGH_LAB.ipynb  Ingredients_AGH_LAB.ipynb  skladniki_simple.xlsx
