[project]
name = "laboratories"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dtreeviz>=2.3.2",
    "feature-engine>=1.9.4",
    "graphviz>=0.21",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "minisom>=2.3.6",
    "nbconvert>=7.17.0",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "optuna-integration[shap]>=3.6.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.11",
]
